--- a/src/test/logging.properties
+++ b/src/test/logging.properties
@@ -1,5 +1,7 @@
-.level=WARNING
-org.eclipse.persistence.level=FINE
+.level=INFO
+com.arjuna.level=FINE
 handlers=java.util.logging.ConsoleHandler
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.ConsoleHandler.level=FINEST
+org.eclipse.persistence.level=FINE
+org.jboss.weld.level=WARNING
