--- a/src/test/logging.properties
+++ b/src/test/logging.properties
@@ -1,6 +1,7 @@
 .level=INFO
 com.arjuna.level=FINE
 handlers=java.util.logging.ConsoleHandler
+io.helidon.integrations.cdi.jpa.weld.WeldJpaInjectionServices.level=FINER
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.ConsoleHandler.level=FINEST
 org.eclipse.persistence.level=FINE
